fix(globals): remove unnecessary media query and ensure consistent overflow properties

--- a/styles/base/globals.scss
+++ b/styles/base/globals.scss
@@ -22,13 +22,8 @@ html {
   font-family: var(--font-jetbrains);
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
-
-  @media (max-width: 790px) {
-    html {
-      scroll-snap-type: none;
-    }
-  }
-
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 body {
@@ -36,10 +31,13 @@ body {
   padding: 0;
   height: 100%;
   overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .section {
   scroll-snap-align: start;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 * {
